Fix Horizontal Scroll

--- a/public/css/admin/adminStyle.css
+++ b/public/css/admin/adminStyle.css
@@ -1,3 +1,8 @@
+
+.content-wrapper {
+  max-width:99vw!important;
+}
+
 .dataTable {
     width:100%;
 }
